fix: update container styles for improved visibility and positioning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,18 +146,18 @@ a:hover {
 */
 
 .container .mainContainer {
-  width: 100%;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: rgb(0 0 0 / 61%);
-  border-radius: 1rem 1rem 0 0;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  align-content: center;
-  flex-wrap: wrap;
-  position: fixed;
-  /* clear: both; */
+     width: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(0 0 0 / 77%);
+    border-radius: 1rem 1rem 0 0;
+    box-shadow: 1px 7px 8px rgba(0, 0, 0, 0.1);
+    align-content: center;
+    flex-wrap: wrap;
+    position: fixed;
+    z-index: 1000;
 }
 
 .brandImg .logo {
